# compute-home

./: README.md  pyproject.toml
compute_home/: __main__.py  utils.py
compute_home/cli/: __init__.py
compute_home/models/: __init__.py  group.py  user.py  users_groups.py
compute_home/server/: __init__.py  session.py
compute_home/server/frontend/: package-lock.json
compute_home/server/handlers/: __init__.py  frontend.py  lti.py
container_launcher/: __init__.py
container_launcher/cli/: __init__.py  setup.py
container_launcher/models/: user.py
container_launcher/server/: __init__.py  session.py
container_launcher/server/frontend/: package-lock.json  package.json  rollup.config.js  tailwind.config.js
container_launcher/server/frontend/public/: index.html
container_launcher/server/frontend/src/: App.svelte  Content.svelte  global.d.ts
container_launcher/server/frontend/src/components/: Activity.svelte  Dialog.svelte
container_launcher/server/frontend/src/routes/: Launcher.svelte
container_launcher/server/frontend/src/store/: activity.ts  config.ts  connection.ts  index.ts  user.ts
container_launcher/server/handlers/: __init__.py  frontend.py  logout.py  lti.py  websocket.py
dev/: .env  config.yml  databases.yml  deploy-jhub.sh  docker-compose.yml  jhub-config.yml  k3s.yaml  moodle.yml  private.pem  public.pem
