[tool.poetry]
name = "container-launcher"
version = "0.1.0"
description = ""
authors = ["Mark Hall <mark.hall@open.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.10"
tornado = "^6.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
click = "^8.1.3"
Cerberus = "^1.3.4"
asyncpg = "^0.25.0"
PyLTI1p3 = "^1.11.0"
sqlalchemy-json = "^0.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
flake8 = "^4.0.1"
flake8-print = "^5.0.0"
flake8-docstrings = "^1.6.0"
flake8-annotations = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
